# kWIP

./: .biojenkins-build.sh  .ci.sh  .coveragerc  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  THANKS.md  kwip-conda-env.yml  requirements.txt  setup.py
cmake/: FindEigen3.cmake  FindKHMER.CMake  Findkhmer.cmake
doc/: Makefile  conf.py  experiments.rst  index.rst  installation.rst  kwip.rst  pipelines.rst
graveyard/kwip-0.2.0/cmake/: Findoxli.cmake
graveyard/kwip-0.2.0/doc/: Makefile  experiments.rst  kwip.rst  pipelines.rst
graveyard/kwip-0.2.0/src/: CMakeLists.txt  hbb-build.sh  kernel.hh  kwip-config.hh.in  population.hh  static.makefile
graveyard/kwip-0.2.0/src/ext/: README.seqan  README.src-ext
graveyard/kwip-0.2.0/src/ext/oxli/: counting.hh
graveyard/kwip-0.2.0/src/kernels/: ip.cc
graveyard/kwip-0.2.0/tests/: helpers.hh  test-kernel.cc  test-kwip-cli.sh  test-lrucache.cc  tests.cc
graveyard/kwip-0.2.0/tests/data/: Makefile  defined-2.fa  defined-3.fa  empty.ct
graveyard/kwip-0.2.0/util/: img_simple.R
graveyard/kwip-1.5/: CMakeLists.txt
graveyard/kwip-1.5/src/: kl2mat.py  kwip_kmercount.c  kwip_kmercount.h  kwip_kmerhash.h  kwip_metrics.h  kwip_utils.c  omp_main.c
graveyard/kwip-1.5/src/ext/clogged/: clogged.h
graveyard/kwip-1.5/src/tests/: CMakeLists.txt  main.c  test_distcalc.c
graveyard/kwip-1.5/src/tests/data/: 10seq.fq
graveyard/kwip-1.5/src2/: kc_array.c  kernelcalc.c  kernelcalc.h
graveyard/kwip-1.5/src2/tests/: array.c  kmercount.c
graveyard/kwipy/misc/: fakecounts.py  printweight.py  readfq.py
hacking/: .gitignore  Makefile  eigencalc.cc
kwip2/: CMakeLists.txt  Makefile.am  README.md  configure.ac  devnotes.md  old.mk
kwip2/src/: CMakeLists.txt  Makefile.am  kc_array.c  kwip_array.c  kwip_array.h  kwip_config.h.in  kwip_distcalc.c  kwip_distcalc.h  kwip_kernelcalc.c  kwip_kernelcalc.h  kwip_kmercount.c  kwip_kmercount.h  kwip_kmerhash.c  kwip_metric_ip.c  kwip_metric_ip.h  kwip_metric_manhattan.c  kwip_metric_manhattan.h  kwip_metrics.c  kwip_metrics.h  kwip_omp_dist.c  kwip_omp_dist.h  kwip_omp_kernel.c  kwip_omp_kernel.h  kwip_utils.c  kwip_utils.h  main.c  omp_main.c
kwip2/src/ext/blosc-h5/src/: blosc_filter.c
kwip2/src/ext/blosc/blosc/: CMakeLists.txt
kwip2/src/ext/clogged/: clogged.c  clogged.h  package.json
kwip2/src/tests/: CMakeLists.txt  main.c  test_array.c  test_distcalc.c  test_kerncalc.c  test_kmercount.c  test_utils.c
kwip2/src/tests/data/: 10seq.fa
kwipy/: .ci.sh  .gitattributes  .gitignore  MANIFEST.in  Makefile  __init__.py  _version.py  conda.yml  requirements.txt  setup.cfg  setup.py  utils.py  versioneer.py
kwipy/h5bench/: h5test.py
kwipy/kwipy/: _counter.pyx  _fastx.pyx  _hash.pyx  _logging.py  arrayio.py  cli.py  cliargs.py  constants.py  counter.c  counter.py  counter.pyx  fastx.py  internals.c  internals.pyx  ipkernels.py  kernelmath.py  logging.py  mpiui.py  progress.py  scripts.py  utils.py
kwipy/kwipy/stale/: arrayio.py  kernelmath.py  progress.py
kwipy/kwipy/test/: test_counter.py  test_kernmath.py  test_progress.py  test_utils.py
kwipy/misc/: bench_fastx.py  benchmark_counting.py  progress-demo.py
kwipy/src/: .gitignore  Makefile  README.rst  kc_array.c  kc_array.h  kmercount.c  kmercount.h  kmerhash  kmerhash.c  kmerhash.h  main.c  test.c
kwipy/src/ext/blosc/: blosc.c  blosc_filter.c
kwipy/src/tests/: array.c  kmercount.c
kwipy/test/: test_fastx.py
src/: CMakeLists.txt  countmin.cc  countmin.hh  d2.cc  d2.hh  d2ent.cc  d2ent.hh  d2pop.cc  d2pop.hh  d2thresh.cc  d2thresh.hh  distance.cc  distance.hh  jensenshannon.cc  jensenshannon.hh  js.cc  js.hh  kernel.cc  kernel.hh  klust.hh  kmerclust-cli.cc  kmerclust-config.hh.in  kmerclust.cc  kmerclust.hh  kwip-cli.cc  kwip-config.hh.in  kwip-utils.cc  kwip-utils.hh  kwip.cc  kwip.hh  lrucache-refcnt.hh  lrucache.hh  lrucache.hpp  main.cc  population.cc  population.hh  static.makefile
src/ext/: README.oxli  README.src-ext
src/kernels/: d2.hh  d2ent.cc  d2ent.hh  d2freq.cc  d2freq.hh  d2pop.cc  d2thresh.hh  ip.cc  ip.hh  wip.cc  wip.hh
src/kmerclust/: d2freq.cc  d2freq.hh  d2pop.cc  d2pop.hh  d2thresh.cc  d2thresh.hh  js.cc  js.hh  kmerclust-cli.cc
src/utils/: entvec.cc  kwip-stats.cc  oxlicap.cc
tests/: CMakeLists.txt  helpers.hh  lrucache.cc  test-cli.sh  test-kernel.cc  test-kmerclust-cli.sh  test-kwip-cli.sh  test-kwip.cc  test-lrucache.cc  tests.cc
tests/data/: Makefile  README-debruijin.md  debruijin-1.ct  debruijin-1.fa  debruijin-2.ct  debruijin-2.fa  debruijin-3.ct  debruijin-3.fa  defined-1.ct  defined-1.fa  defined-2.ct  defined-3.ct  defined-4.ct  defined-4.fa  empty-2.ct  empty-3.ct
util/: .RData  ci-build.sh  img.R  simple-install.sh
